<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/header_text"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_length"
            android:layout_marginRight="@dimen/margin_length"
            android:layout_marginTop="@dimen/margin_length"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_length"
            android:layout_marginRight="@dimen/margin_length"
            android:layout_marginTop="@dimen/margin_length"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_length"
            android:layout_marginRight="@dimen/margin_length"
            android:layout_marginTop="@dimen/margin_length"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_length"
            android:layout_marginRight="@dimen/margin_length"
            android:layout_marginTop="@dimen/margin_length"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_length"
            android:layout_marginRight="@dimen/margin_length"
            android:layout_marginTop="@dimen/margin_length"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />
        <Spinner
            android:id="@+id/spinner_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_length"
            android:layout_marginRight="@dimen/margin_length"
            android:layout_marginTop="@dimen/margin_length"
            android:inputType="text"
            android:prompt="@string/role"
            android:autofillHints=""/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_length"
            android:layout_marginRight="@dimen/margin_length"
            android:layout_marginTop="@dimen/margin_length"
            android:layout_marginBottom="@dimen/margin_length"
            android:layout_gravity="center"
            android:background="@color/button_color"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/button_text_color"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>